# kaneru-bar

./: Cargo.toml  build.rs  example-config.yaml  flake.nix
src/: main.rs
src/resources/: kaneru.gresource.xml.in  style.css  style.scss
src/resources/abstracts/: _colors.scss  _mixins.scss
src/resources/base/: _typography.scss
src/resources/components/: _button.scss
src/resources/widgets/: active-client.scss  vitals.scss
src/resources/windows/: OSD.scss  app-menu.scss  audio-control.scss  bar.scss  battery.scss  date.scss  display-control.scss  dock.scss  github.scss  media-control.scss  network.scss  notifications.scss  sysinfo.scss
src/utils/: app_resolver.rs  battery.rs  config.rs  display_control.rs  distro.rs  mod.rs  network.rs  niri.rs  notification.rs  notification_manager.rs  notification_server.rs  persistence.rs  style.rs
src/widgets/: active_client.rs  battery.rs  display_control.rs  mod.rs  network.rs
src/windows/: app_menu.rs  bar.rs  battery.rs  date.rs  display_control.rs  dock.rs  mod.rs  network.rs  notification_popup.rs
