[package]
name = "kaneru"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
gio = "0.20.9"
glib = "0.20.9"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
pango = "0.20.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
anyhow = "1.0.98"

[build-dependencies]
glib-build-tools = "0.20.0"
anyhow = "1.0.98"
