[package]
name = "kaneru"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
gio = "0.20.9"
glib = "0.20.9"
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
pango = "0.20.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
anyhow = "1.0.98"
niri-ipc = "25.2.0"
zbus = "4.4.0"
async-trait = "0.1.88"
tracing = "0.1.41"
tokio = { version = "1.44.2", features = [
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
chrono = "0.4.40"
battery = "0.7.8"
rusty_network_manager = { version = "0.6.0", default-features = false, features = [
  "access_point",
  "active",
  "device",
  "connection",
  "wireless",
] }

[build-dependencies]
glib-build-tools = "0.20.0"
anyhow = "1.0.98"
